# if-solutions-catalog

./: .gitignore  404.html  Interoperability Problems.md  README.md  index.html  pyproject.toml
.github/ISSUE_TEMPLATE/: if-solution-template.md  if-solution.yml
interoperability_problems/: index.html
search/: search_index.json
solutions/if_solution_1/: index.html
solutions/if_solution_10/: index.html
solutions/if_solution_100/: index.html
solutions/if_solution_101/: index.html
solutions/if_solution_102/: index.html
solutions/if_solution_103/: index.html
solutions/if_solution_104/: index.html
solutions/if_solution_105/: index.html
solutions/if_solution_106/: index.html
solutions/if_solution_107/: index.html
solutions/if_solution_108/: index.html
solutions/if_solution_109/: index.html
solutions/if_solution_11/: index.html
solutions/if_solution_110/: index.html
solutions/if_solution_111/: index.html
solutions/if_solution_112/: index.html
solutions/if_solution_113/: index.html
solutions/if_solution_114/: index.html
solutions/if_solution_115/: index.html
solutions/if_solution_116/: index.html
solutions/if_solution_117/: index.html
solutions/if_solution_118/: index.html
solutions/if_solution_119/: index.html
solutions/if_solution_12/: index.html
solutions/if_solution_120/: index.html
solutions/if_solution_121/: index.html
solutions/if_solution_122/: index.html
solutions_overview/: index.html
solutions_overview_by_problem/: index.html
solutions_overview_by_type/: index.html
src/: build.py  mkdocs.yml
(+273 files in other folders)
